--- a/practical/practical8.Rnw
+++ b/practical/practical8.Rnw
@@ -1,6 +1,8 @@
 \documentclass[12pt]{article}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{parskip}
+\usepackage{amsmath}
 \restylefloat{table}
 \usepackage{subcaption}
 \renewcommand\thesubfigure{\roman{subfigure}}
@@ -10,73 +12,80 @@
 \title{Generalised Linear Models, Assessed Practical}
 \author{Practical No. P049}
 \begin{document}
-\SweaveOpts{concordance=TRUE}
 
 
 \maketitle
 \newpage
 
-\section{Induction}
+\section{Introduction}
 
-A new treatment for lung cancer which is being tested in rats. The experiment has 24 batches of 25 rats tested at six different dose levels. Rats were splited into males and females. The new treatement was in addition to standard therapy or without standard therapy. The number of rats who died whilst undergoing treatement was recorded. The reponse variable in this dataset is numdead, the exploanatory variables are dose, sex, standard.
+A new treatment for lung cancer which was tested in rats. The experiment has 24 batches of 25 rats tested at six different dose levels. Rats were split into males and females. The new treatment was in addition to standard therapy or without standard therapy. The response variable in this dataset is numdead, which is the number of rats who died whilst undergoing treatment The exploratory variables are dose, sex, standard.
 
-In this paper we apply generalised linear model on those variables to find a proper model that can explain the relation between each variables with number of dead rats. Before we fit the models, we explore and analysis data, which helps us to understand the relation between reponse varible and exploanatory variables. Based AIC(Akaike information criterion), diviance test and the information we find in data, we select the best model from all the possible models. We explain what find we in the model, give the goodness of fit.
+In this paper we applied generalised linear model analysis to find a proper model that can explain the relationship between each variable with the number of dead rats. We firstly offered some explanatory plots of the data. We fitted logistic regression of mortality with dose level, then we considered to add other variables into model. We used stepwise AIC and likelihood ratio test as our model selection methods. After we got a model that is most suitable in describing data, we performed goodness of fit test to check the quality of the model and give interpretation of the model.
+
 
 \section{Methods}
-Scatter plots are used to give a basic exploration of the numdead with other variables. Logistic regression are the model that we used to fit our data. The Logistic regression equantion is: 
+Scatter plots are used to give a basic exploration of the mortality with other variables. Logistic regression is the model that we used to fit our data. The Logistic regression equation is: 
 \begin{equation}
 logit(p_i) = \ln(\frac{p_i}{1-p_i}) = \beta _0+\beta _1x_{1,i}+\cdots +\beta _{m}x_{m,i}
 \end{equation}
-$i = 1,\cdots,n$(number of observation), $m = 1,\cdots,p$(number of exploanatory variables). Forward stepwise based on AIC is used to select the best model based on minimizing AIC score, we use this method to automatic select proper model for us. Deviance test is also used for model selection by us. The deviance equation is:
+where 
+\begin{itemize}
+\item$i = 1,\cdots,n$(number of observation) 
+\item$m = 1,\cdots,p$(number of exploratory variables) 
+\item$p_i$ is the probability of success and $p_i$ follows binomial distribution. 
+\end{itemize}
+Forward stepwise AIC is used to select the model with minimum AIC score, and we used this method to automatically select proper model. Likelihood ratio test was also used for model selection. For Likelihood ratio test, if there are T=two nested models(Q) with dimension q and (P) with dimension p less than q, the null hypothesis test is we prefer model(P), alternative is model(Q), and the likelihood ratio test statistic is:
+
+\begin{equation}
+\Lambda = D^{(p)}(y) - D^{(Q)}(y) \sim\chi ^{2} _{(q-p)}
+\end{equation}
+
 \begin{equation}
 D(y) = -2 \Big( \log \big( p(y\mid\hat \theta_0)\big)-\log \big(p(y\mid\hat \theta_s)\big)\Big) \sim\chi ^{2} _{(n-p)}
 \end{equation}
-Based on AIC and deviance test, we choose our final model. After that Goodness of fit methods are used to assess the quality of out final model.
+
+where
+\begin{itemize}
+\item$\theta_0$ is estimated by current model
+\item$\theta_s$ is estimated by saturated model 
+\item$p(y\mid\hat \theta)$ is likelihood function
+\end{itemize}
+
+Based on AIC and likelihood ratio test, we chose our final model. Finally, goodness of fit methods are used to assess the quality of our final model.
 
 \section{Results}
 \subsection{Data exploration}
 \begin{figure}[H]
 \centering
-The data are the result of a 6 * 2 * 2 factorial experiment with 25 replications. The three available explanatory variables are the dose level of treatment from 1 to 6, the sex of rats, female and male and the conditions under which the treatment was performed, standard therapy or non-standard therapy.
 
-<<echo=FALSE, fig = TRUE, out.width='3in'>>=
-rats = read.csv("I:/Oxford/R Data/rats.csv", header = T)
+<<echo=FALSE, fig = TRUE, out.width='4in'>>=
+rats = read.csv("P:/R Data/rats.csv", header = T)
 rats$dead_rate = rats$numdead/25
   
 attach(rats)
 
 par(mar=c(5,5,1,1))
-plot(rats[rats$sex=='M'&rats$standard==1,"dose"],rats[rats$sex=='M'&rats$standard==1,"dead_rate"],pch=1,col='blue',xlab='Dose level',ylab='mortality', ylim=c(0,1), cex.lab=1.5)
+plot(rats[rats$sex=='M'&rats$standard==1,"dose"],rats[rats$sex=='M'&rats$standard==1,"dead_rate"],pch=1,col='blue',xlab='Dose level',ylab='mortality', ylim=c(0,1), cex.lab=2,cex.axis=1.5)
 points(rats[rats$sex=='M'&rats$standard==0,"dose"],rats[rats$sex=='M'&rats$standard==0,"dead_rate"],pch=5,col='blue')
 points(rats[rats$sex=='F'&rats$standard==1,"dose"],rats[rats$sex=='F'&rats$standard==1,"dead_rate"],pch=20,col='red')
 points(rats[rats$sex=='F'&rats$standard==0,"dose"],rats[rats$sex=='F'&rats$standard==0,"dead_rate"],pch=18,col='red')
-legend("topright", col = c('blue', 'blue', 'red','red'), pch = c(1,0,2,5), legend = c("Male and Standard", "Male and Non Standard", "Female and Standard", "Female and Non Standard"), cex = 1)
+legend("topright", col = c('blue', 'blue', 'red','red'), pch = c(1,0,2,5), legend = c("Male and Standard", "Male and Non Standard", "Female and Standard", "Female and Non Standard"), cex = 1.5)
 
 @
-  \caption{\textbf{Scatter plot: }{plot all exploanatory variables respect to mortality .}}
+  \caption{\textbf{Scatter plot: }{plot all exploratory variables respect to mortality .}}
 \end{figure}
 
-A scatter plot shown in Figure 1 illustrate that the lower(1,2,3) and high(6) level of dose have high mortality compare to middle(4,5) level of dose, we think does level may has a qurdratic reletion with mortality. additionally the difference of mortality between males and females is different at same dose level, for dose level 1,2,5, and 6, females has a higher mortality, for 3 and 4, males has a higher mortality. We think the the males and females have different changing rate of moratluty given dose level. For variable standard, we don't see too much different between standard therapy and without standard therapy. 
-
+A scatter plot shown in Figure 1 in next page illustrates that the low(1,2,3) and high(6) level of dose have high mortality compared with middle(4,5) level of dose. Does level may has a quadratic relationship with mortality. Additionally, the mortality of male and female is different at same dose level. For dose level 1,2,5, and 6, females have a higher mortality. For 3 and 4, males have a higher mortality. The males and females have different changing rate of mortality under different dose levels. For variable standard, there is less difference in mortality with or without standard therapy.
 
 \begin{figure}[H]
 \centering
 <<echo=FALSE, fig = TRUE, out.width='3in'>>=
-plot(dose, dead_rate, col = standard+1, pch = 16, xlab='Dose level', ylab='mortality', ylim=c(0,1),cex.lab=2,cex.axis = 1.5)
-legend("topright", col = c('black', 'red'), pch = c(16,16), legend = c("Non-Standard", "Standard"))
+boxplot(dead_rate ~ standard + sex, ylab='mortality', ylim=c(0,1),cex.lab=2, cex.axis = 2)
 @
-  \caption{\textbf{Scatter plot: }{Dose level and standard therapy respect to mortality.}}
+  \caption{\textbf{Box plot: }{mortality of rats within the levels of the sex and standard. "0.F" means Non-standard with female. "1.F" means standard with male.}}
 \end{figure}
-An scatter plot shown in Figure 2 suggests that the effect of the standard varible on the response is not strong enough for us to see the difference betweenstandard therapy and without standard therapy.
-
-\begin{figure}[H]
-\centering
-<<echo=FALSE, fig = TRUE, out.width='3in'>>=
-boxplot(dead_rate ~ standard + sex, ylab='mortality', ylim=c(0,1),cex.lab=2, cex.axis = 1.5)
-@
-  \caption{\textbf{Scatter plot: }{plot all exploanatory variables respect to mortality. "0.F" means Non-standard with female.              "1.F" means standard with male.}}
-\end{figure}
-Box-plots shown in Figure 3 illustate that standard dosen't affect the moraluty a lot, and we see females has larger variance than males. So in our initial model, we will consider dose and sex as exploanatory variables.
+Box-plot shown in Figure 2 illustrates that standard dose not affect the mortality a lot, and we see females have larger variance than males. Thus, we will consider dose levels and sex as exploratory variables in our initial model.
 
 \subsection{Modelling data}
 <<echo=FALSE>>=
@@ -84,14 +93,12 @@ library(MASS)
 model1 = glm(cbind(numdead,numalive)~I(dose^2)+dose,family=binomial(),data=rats)
 @
 
-To investigate how mortality depends on dose, we start by fitting a logistic regression which only includes dose. Based on what we find from Data exploration part, we decide our initial model to be
+To investigate how mortality depends on dose, we start by fitting a logistic regression which only includes dose levels. Based on previous analysis, we put quadratic term of dose into model, our initial model is:
 \begin{equation}
-(numdead, numalive) \sim I(dose^2) + dose
+logit(Mortality) =  \beta _0+\beta _1dose^2 + \beta _2dose + \epsilon _i 
 \end{equation}
 
-The residual deviance of model above is 20.44 with 21 degrees of freedom . We use deviance test to test \textit{$H_0$}: the initial model is ture model versus the alternative that saturated model is ture model. The p-value is equal to 0.49, which is less than 0.05, so Therefore we have no evidence against the null hypothesis. We take this model as suitable model for risk of mortality based on dose.
-
-Now we consider the other variables with mortality. As we discovered in Data exploration part, we add sex into our initial model and do the \textit{StepAIC}.
+The residual deviance of model above is 20.44 with 21 degrees of freedom. We use likelihood ratio test to test \textit{$H_0$}: the initial model is preferred versus the alternative that saturated model is preferred The p-value is 0.49 \textgreater 0.05. We have no evidence against the null hypothesis. The residual plot indicates there are some potential outliers, and the QQ-plot shows it dose not follow the normality assumption very well, so as we find in Figure 1 and Figure 2, we consider to add sex into our initial model, which may help our model to fit the data better. After we add sex into our model, we run the stepwise AIC procedure. The model with the lowest AIC value is:
 
 <<echo=FALSE>>==
 model2 = glm(cbind(numdead,numalive)~I(dose^2)+dose+sex+standard,family=binomial(),data=rats)
@@ -102,11 +109,22 @@ model3 = glm(cbind(numdead, numalive) ~ I(dose^2) + dose + sex + I(dose^2):sex +
                dose:sex + I(dose^2):dose, family=binomial(),data=rats)
 @
 
-The \textit{StepAIC} gives us:
+The model with the lowest AIC value is:
 \begin{equation}
-(numdead, numalive) \sim I(dose^2) + dose + sex + I(dose^2):sex + dose:sex + I(dose^2):dose
+\begin{aligned}
+logit(Mortality_i) =  &\beta _0+\beta _1dose_i^2 + \beta _2dose_i + \beta _3sex_i + \beta _4dose_i^2:I(sex) + \\ &\beta _5dose_i:I(sex) + \beta _6dose_i^2:dose + \epsilon _i 
+\end{aligned}
 \end{equation}
-The model above has the smallest AIC and residual deviance equal to 4.50 with 17 degree of freedom, we named it model2. We also see this model only includes dose and sex, this result agrees with our exploratory analysis of the data. But instead of using AIC stepwise, we also need to look at the ANOVA of this model based on Chi-squared test to see if each variables is significant. 
+\begin{equation}
+I(sex) = 
+\begin{cases}
+0, sex = female\\
+1, sex = male
+
+\end{cases}
+\end{equation}
+
+The model above has the smallest AIC and residual deviance equal to 4.50 with 17 degree of freedom (model2). We also see this model only includes dose and sex. This result is consistent with our previous exploratory analysis. Because AIC does not provide a test of a model in the sense of testing a null hypothesis, it can tell nothing about the quality of the model. The p-value of likelihood ratio test between initial model and model2 is 6.35*$10^{-5}$, which is less than 0.05, we can see model2 fits the data better than initial model. We also introduce the ANOVA table of model 2 based on likelihood ratio test to see if the effect of each variable is significant.
 
 <<echo=FALSE>>=
 # look at the nested deviance tests, drop I(dose^2)*dose
@@ -122,24 +140,32 @@ model4 = glm(cbind(numdead, numalive) ~ I(dose^2) + dose + sex + I(dose^2):sex +
  & Df & Resid. Df & Resid. Dev & Pr($>$Chi) \\ 
   \hline
 NULL & & 23 & 84.21 &  \\ 
-  I(dose\verb|^|2) & 1 & 22 & 76.88 & 0.00 \\ 
+  $dose^2$ & 1 & 22 & 76.88 & 0.00 \\ 
   dose & 1 & 21 & 20.44 & 0.00 \\ 
-  sex & 1 & 20 & 19.78 & 0.42 \\ 
-  I(dose\verb|^|2):sex & 1 & 19 & 15.90 & 0.05 \\ 
+  sex & 1 & 20 & 19.78 & \textbf{0.42} \\ 
+  $dose^2$:sex & 1 & 19 & 15.90 & 0.05 \\ 
   dose:sex & 1 & 18 & 6.83 & 0.00 \\ 
-  I(dose\verb|^|2):dose & 1 & 17 & 4.50 & 0.13 \\ 
+  $dose^2$:dose & 1 & 17 & 4.50 & \textbf{0.13} \\ 
    \hline
    \caption{\textbf{ANOVA table of model2}}
 \end{tabular}
 \end{table}
-Comparing to the intial model, the residual deviance drop 20.44-4.5 = 15.94, we can see this model fits the data better than the intial model.
 
-From the ANOVA table of model2, we use deviance test again to test \textit{$H_0$}: the model2 is ture model versus the alternative that saturated model is ture model, the p-value 0.13 for this test, it is not significant at 0.05 level, So we won't consider model2 as proper model. Then we remveo I(dose\verb|^|2):dose, now our model is:
+
+ANOVA table shown in table 1 illustrates that the p-value of $dose^2$:dose and sex are greater than 0.05, which means the $dose^2$:dose and sex are not significant at 0.05 level for likelihood ratio test, so we remove $dose^2$:dose from model2. Our final model (model3) is:
 \begin{equation}
-(numdead, numalive) \sim I(dose^2) + dose + sex + I(dose^2):sex + dose:sex
+\begin{aligned}
+logit(Mortality_i) =  &\beta _0+\beta _1dose_i^2 + \beta _2dose_i + \beta _3sex_i + \beta _4dose_i^2:I(sex) + \\ &\beta _5dose_i:I(sex) + \epsilon _i 
+\end{aligned}
 \end{equation}
-We named it sa model3 and do the deviance test again. This time the p-value is 0.00, it is significant at 0.05 level. Therefore, we choose model3.
 
+\begin{equation}
+I(sex) = 
+\begin{cases}
+0, sex = female\\
+1, sex = male
+\end{cases}
+\end{equation}
 
 \subsection{Goodness of fit}
 \begin{figure}[H]
@@ -157,7 +183,7 @@ plot(model4$fitted.values,rstandard(model4),xlab='Fitted Values', ylab='Deviance
 abline(h=0, col = "red")
 #ok
 
-qqnorm(rstandard(model4),pch=1,main='Q-Q plot', cex.lab=1.5, ylim = c(-2,2))
+qqnorm(rstandard(model4),pch=1,main='QQ-plot', cex.lab=1.5, ylim = c(-2,2))
 qqline(rstandard(model4),col = "red")
 #ok
 
@@ -171,13 +197,12 @@ plot(cooks.distance(model4), ylim=c(0,0.7), pch=1,ylab="Cook's Distance", cex.la
 abline(h = 8/(24-2*6), col = "red")
 #ok
 @
-  \caption{\textbf{Goodness of fit plot }{}}
+  \caption{\textbf{Goodness of fit plot of model3 }{}}
 \end{figure}
-The Deviance residuals shows points randomly scattered, there are no studentised residuals outside the -2,2 range
-The QQ-plot shows the most of the points tend to follow the straight red line through the origin. We consider there are no obvious violation of normality assumption. 
-The leverage plot shows all points are under the red line which is 2*p/n = 0.5, so no data has a large leverage.
-The cook distance plot also shows all points are under red line which is 8/(n-2p) =0.67, so no data has a large influence.
-The model fits data well, and no outliers in our data.
+The Deviance residuals plot shows points are not randomly scattered, but there are no deviance residuals outside the (-2,2) range.
+The QQ-plot shows the most of the points tend to follow the straight red line through the origin, which dose not show any departure of normality assumption. 
+The leverage plot shows all points are under the red line, where the threshold is 2*p/n = 0.5(p = 6, n = 24), so no data has a large leverage.
+The cook distance plot also shows all points are under red line which is 8/(n-2p) = 0.67. No data has a large influence, and no obvious outliers are detected.
 
 \subsection{Interpretation}
 The summary of our selected model is presented below:
@@ -198,46 +223,188 @@ The summary of our selected model is presented below:
 \end{tabular}
 \end{table}
 
-Since we have interaction between sex and dose in our model, we have two equations for males and females separately based on table 2:
-
+The linear predictor of our final model can be written as 
 \begin{equation}
-Females : (numdead, numalive) = 3.29 + 0.36*I(dose^2) - 2.69*dose
+Females : logit(Mortality_i) = 3.29 + 0.36*dose^2 - 2.69*dose
+\end{equation}
+\begin{equation}
+\begin{aligned}
+Male : logit(Mortality_i) = 1.37 + 0.12*dose^2 - 1.11*dose
+\end{aligned}
 \end{equation}
 
-\begin{equation}
-Male : (numdead, numalive) = (3.29-1.92) + (0.36-0.24)*I(dose^2) + (-2.69+1.58)*dose
-\end{equation}
+The table 2 shows that all the 95\% confidence intervals do not contain zero, which means all parameters are significant at 0.05 significant level. The final model shows that if rats do not receive any treatment, the log odd of mortality is 3.29 and 1.37 for females and males respectively. The log odd for mortality of female will change -2.33+0.72*dose for an increase of dose level by one, and will change -0.99+0.24*dose for male. The gradient for females is 0.72*dose - 2.69, for males is 0.24*dose - 1.11, since 0.72 \textgreater 0.24, it means females are more sensitive to the dose level than males. For getting the minimum value, we calculate the first derivative and set it equals to zero. When dose level equals to 3.73, we have the smallest mortality for females which is 0.15, and 0.24 for males when dose level equals to 4.62. We can see that females' minimum mortality is less than males' minimum mortality, so the new treatment works better on females.
 
-We fit this two model on data.
 \begin{figure}[H]
 \centering
-<<echo=FALSE, out.width='4in', fig = TRUE>>==
+<<echo=FALSE, out.width='5in', fig = TRUE>>==
 x <- seq(from=0,to=7,length.out=20)
 ndM <- data.frame(dose=x,sex="M")
 bw.respM <- predict(model4,ndM,type='response')
-plot(ndM$dose,bw.respM*20,type='l',col='blue',ylim=c(0,20), xlab='Dose level', ylab='Proportion dead', cex.lab=1.5)
-points(rats[rats$sex=="M","dose"],rats[rats$sex=="M","numdead"],pch=19,col='blue')
+plot(ndM$dose,bw.respM,type='l',col='blue',ylim=c(0,1), xlab='Dose level', ylab='Mortality', cex.lab=1.5)
+points(rats[rats$sex=="M","dose"],rats[rats$sex=="M","dead_rate"],pch=19,col='blue')
+ndF <- data.frame(dose=x,sex="F")
+bw.respF <- predict(model4,ndF,type='response')
+lines(ndF$dose,bw.respF,type='l',col='red')
+points(rats[rats$sex=="F","dose"],rats[rats$sex=="F","dead_rate"],pch=19,col='red')
+abline(v = 3.73, col = "red")
+abline(v = 4.62, col = "blue")
+legend("topright", col = c('blue', 'red'), pch = c(19,19),legend = c("Males", "Females"), cex = 1.5)
+@
+  \caption{\textbf{Prediction plot: }{plot fitted line on data, the red vertical line indicates when gradient of red curve changes from negative to positive. Same for blue vertical line.}}
+\end{figure}
+We draw the fitted line on the data. In Figure 4, the blue line is fitted line for males and red line is for females. We can see our model catches how females' and males' mortality changed respects to different dose levels. It shows females have lower mortality, but the females' mortality becomes larger than males when dose level is greater than 5 and less than 2.  
+
+
+\section{Conclusions}
+In conclusion, the mortality decreases when dose level increases at the beginning, but the mortality starts to increase when dose level keeps increasing after certain dose level (3.73 for females, 4.62 for males). We also notice females and males have different level of response for different dose level, where females' mortality is easier to be affected by dose level. This treatment works more effectively on females.
+
+There are some limitations in this model. From our final model, it indicates that the sex affects the mortality, but we only have 12 data for each gender, the sample size may not be large enough for us to get an accurate result. Secondly, we only know the gender of rats, and we may need more characters about rats, such as weight, size, age, because sex and dose levels may not be only factors that affect mortality. There are only six difference dose levels in this experiment, so it is better to have more different dose levels, or divides existing levels into small groups. For binomial data, the link function could be probit, logistic and log-log,  logistic is only link function we tried in this paper, so in the future work, we can try other link functions and compare how good they fit the data. One more thing, there are 600 rats taken in this experiment, which are divided into 24 batches. The data we used is the number of death in each batch. However, there is an alternative way to analyse all these 600 rats individually. We could categorize the results of mortality with 0 (alive) and 1 (death) as a new variable for each rat. Therefore, there are 600 data points which could be used to fit the model, which might be an alternative way to analyse this risk of mortality.
+
+\newpage
+\appendix
+\section{Appendix}
+\subsection{R code}
+<<eval = FALSE>>=
+#########################################   1
+rats = read.csv("P:/R Data/rats.csv", header = T)
+
+# take a initial look of data, and check if it is loaded correctly
+str(rats)
+# will consider does as one exploration varible
+
+##########################################  2
+#turn to dead rate
+rats$dead_rate = rats$numdead/25
+  
+attach(rats)
+
+par(mar=c(5,5,1,1))
+plot(rats[rats$sex=='M'&rats$standard==1,"dose"],rats[rats$sex=='M'&
+    rats$standard==1,"dead_rate"],pch=1,col='blue',xlab='Dose level',
+    ylab='mortality', ylim=c(0,1))
+
+points(rats[rats$sex=='M'&rats$standard==0,"dose"],rats[rats$sex=='M'&
+                        rats$standard==0,"dead_rate"],pch=0,col='blue')
+points(rats[rats$sex=='F'&rats$standard==1,"dose"],rats[rats$sex=='F'&
+                        rats$standard==1,"dead_rate"],pch=2,col='red')
+points(rats[rats$sex=='F'&rats$standard==0,"dose"],rats[rats$sex=='F'&
+                        rats$standard==0,"dead_rate"],pch=5,col='red')
+legend("topright", col = c('blue', 'blue', 'red','red'), pch = 
+         c(1,0,2,5),legend = c("Male and Standard", "Male and Non 
+                               Standard", "Female and Standard", 
+                               "Female and Non Standard"))
+
+# The difference between standard zore and stadard one is not so much 
+#different,so we remove the standard from the plot, and look at
+#mortality respect to does and sex
+
+plot(dose, dead_rate, col = standard+1, pch = 16, xlab='Dose level', 
+     ylab='mortality', ylim=c(0,1))
+#we see the the numdead decrease first, as dose increase, and increase 
+#after, it may follows a quadratic, the sex and dose have affect, but 
+#there is not a clear relation.
+
+boxplot(dead_rate ~ standard + sex, ylab='mortality', ylim=c(0,1))
+
+###########################################  3
+
+library(MASS)
+
+# we see a quadratic relationship between does and dead-rate, so apply
+#quadratic model
+model1 = glm(cbind(numdead,numalive)~I(dose^2)+dose,family=binomial(),
+             data=rats)
+summary(model1)
+1-pchisq(20.44,21)
+#favor current model
+
+###########################################  4
+#Comment on your model and interpret the parameters giving suitable 
+#measures of uncertainty
+
+#stepAIC#
+# put all other varibles, and do stepwise with AIC
+model2 = glm(cbind(numdead,numalive)~I(dose^2)+dose+sex+standard,
+             family=binomial(),data=rats)
+stp = stepAIC(model2,
+              scope = list(upper = ~sex * standard * dose * I(dose^2),
+                           lower = ~1))
+# StepAIC gives us model3
+model3 = glm(cbind(numdead, numalive) ~ I(dose^2) + dose + sex +
+              I(dose^2):sex + dose:sex + I(dose^2):dose,
+              family=binomial(),data=rats)
+# look at the nested deviance tests, drop I(dose^2)*dose
+anova(model3, test = "Chisq")
+
+# we get model4
+model4 = glm(cbind(numdead, numalive) ~ I(dose^2) + dose + sex + 
+               I(dose^2):sex + dose:sex, family=binomial(),data=rats)
+
+# I don't know if I should do it
+#anova(justice.glm<-glm(formula = cbind(numdead,numalive)~I(dose^2)
+#* sex * standard * dose, family = binomial(), data = rats),
+#test='Chisq')
+
+# compare the current model with the model we find last step
+anova(model1, model4, test = "Chisq")
+
+exp(confint(model4))
+###########################################
+
+summary(model4)
+1 - pchisq(6.8287, 18)
+#model looks OK RD=6.8287 on 18 DOF
+
+rstandard(model4)
+sum(abs(rstandard(model4)) >= 2) #no big numbers - so OK (-2,2)
+
+#Working Residuals
+par(mar=c(5,5,1,1))
+plot(model4$fitted.values,model4$residuals,xlab='Fitted Values', 
+     ylab='Working Residuals', pch=19,xlim=c(0,1),ylim=c(-1.5,1.5))
+abline(h=0)
+#ok
+
+# LEVERAGE
+plot(influence(model4)$hat,ylim=c(0,1.5),col='blue',
+     pch=19,ylab='Leverage')
+abline(h = 2*(6/24))
+# ok
+
+# DEVIANCE RESIDUALS
+plot(model4$fitted.values,rstandard(model4),xlab='Fitted Values',
+     ylab='Deviance Residuals',pch=19,xlim=c(0,1),ylim=c(-2,2))
+abline(h=0)
+#ok
+
+qqnorm(rstandard(model4),pch=19,main='')
+qqline(rstandard(model4))
+#ok
+
+# COOKS DISTANCE
+plot(cooks.distance(model4), ylim=c(0,0.7),
+     pch=19,ylab="Cook's Distance")
+abline(h = 8/(24-2*6), col = "red")
+#ok
+############################################
+x <- seq(from=0,to=7,length.out=20)
+ndM <- data.frame(dose=x,sex="M")
+bw.respM <- predict(model4,ndM,type='response')
+plot(ndM$dose,bw.respM*20,type='l',col='blue',ylim=c(0,20), xlab='Dose 
+     level', ylab='Proportion dead')
+points(rats[rats$sex=="M","dose"],rats[rats$sex=="M","numdead"],pch=19,
+       col='blue')
 ndF <- data.frame(dose=x,sex="F")
 bw.respF <- predict(model4,ndF,type='response')
 lines(ndF$dose,bw.respF*20,type='l',col='red')
-points(rats[rats$sex=="F","dose"],rats[rats$sex=="F","numdead"],pch=19,col='red')
-legend("topright", col = c('blue', 'red'), pch = c(19,19),legend = c("Males", "Females"), cex = 1)
+points(rats[rats$sex=="F","dose"],rats[rats$sex=="F","numdead"],pch=19
+       ,col='red')
+abline(v = 3.73, col = "red")
+abline(v = 4.62, col = "blue")
+legend("topright", col = c('blue', 'red'), pch = c(19,19),legend = 
+         c("Males", "Females"), cex = 1.5)
+
+
 @
-  \caption{\textbf{Prediction plot: }{plot fitted line on data}}
-\end{figure}
-
-For Female rats, if rats don't receive any treatment, the log odd of mortality is 3.29(95\% CI: (2.19, 4.47)). The log odd that corresponding to one unit inceasing of dose level is - 2.69(95\% CI: (-3.84, -1.95))+2*0.36(95\% CI: (0.26, 0.47))*dose +1.Since it is a qurdratic function, and Figure 5 shows this function has a minimum value. We need to calculte the first derivative and set it equal to zero to get the minimum point. 0.36*2*dose-2.69 = 0, from this equation, we get $dose = 3.73 \approx 4$. When dose equal to 4, we have the smallest log odd of moratality. It matches what we see in Figure 5. 
-For Male rats, we do the same analysis. If rats don't receive any treatment, the log odd of mortality is 3.29 - 1.92 = 1.37. (0.36-0.24)*2*dose-(-2.69+1.58) = 0, from this equation, we get $dose = 4.62 \approx 5$. When dose equal to 5, we have the smallest log odd of moratality. It also matches what we see in figure 5. 
-If we compare Females and Male model, we can see how sex varible affects mortality. $dose^2_males$ = 0.12, $dose^2_female = 0.36$, it means females are more senstive to the dose level than males. And the best dose level for females and males is different, females is 4, males is 5, so when use this treatment for lung cancer, we need consider the sex, and give different dose level.  
-
-\section{Conclusions}
-There are some limitations in this model. From the model above, it indicates that the sex affect the mortality, and females are more sensitive than males, but we only have 12 data for each gender, which might lead to an inaccurate model considering the effects of sex. We only know the gender of rats, if we have more characters of rats, such as weight, size, age, that may help us to get more accurate model for mortality. More dose level. Also we only have six different does level,  and we don't know relation between the dose level, We don't know if the dose level increases linearly or qurdratic.  
-
-Other links, disperation
-Analysis methods you might consider
-Probit regression. Probit analysis will produce results similar logistic regression. The choice of probit versus logit depends largely on individual preferences.
-Two-group discriminant function analysis. A multivariate method for dichotomous outcome variables.
-
-In conclusion, the mortality decreases when dose level increases at teh beginning, but the mortality starts to increase when dose level keeps increasing after certain dose level(4 for females, 5 for males). We also notice that sex is also a factor which affects the mortality. Females and Males have different respone for this treatment, Females' mortality is easier to be affected by dose level, and comparing to Males, Females can reach the lowerest mortality with a lower level of dose. And the this treatment works better on Females. 
-
 \end{document}
